--- a/server/views/manager.ejs
+++ b/server/views/manager.ejs
@@ -45,8 +45,8 @@
             <div class="manager-nav"><a href="./getchecked"><button><i class="far fa-check-square"></i></button></a><h2>Get All Checked</h2></div>
             <div class="manager-nav"><a href="./calendar"><button id="county-calendar"><i class="far fa-calendar-alt"></i></button></a><h2>Calendar</h2></div>
             <div class="manager-nav"><button id="checkProdButton"><i class="fas fa-file-signature"></i></button><h2>Check Production</h2></div>
-            <div class="manager-nav"><a href="./templates"><button><i class="fas fa-envelope-open-text"></i></button></a><h2>Templates</h2></div>
-            <div class="manager-nav"><a href="./countystatus"><button class="add-user" id="directory"><i class="fas fa-flag-usa"></i></button></a><h2>Directory</h2></div>  
+            <div class="manager-nav"><a href="./countystatus"><button class="add-user" id="directory"><i class="fas fa-flag-usa"></i></button></a><h2>Directory</h2></div> 
+            <div class="manager-nav" style="border: none;"></div>
             <div class="manager-nav"><a><button class="add-user" id="logoff"><i class="fas fa-power-off"></i></button></a><h2>Logoff</h2></div>  
         </div>
 
@@ -158,7 +158,7 @@
                 </div>
                 <ul>
                     <a href="./countycalendarbystate"><li>Production By State</li></a>
-                    <a href="./countycalendar"><li>Production By Date</li></a>
+                    <!--<a href="./countycalendar"><li>Production By Date</li></a>-->
                     
 
                 </ul>
